[workspace]
members = ["programs/*"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.26.0" }
mpl-token-metadata = { version = "1.11.0", features = ["no-entrypoint"] }
mpl-bubblegum = { version = "0.9.2", features = ["no-entrypoint", "cpi"] }
spl-account-compression = { version = "0.1.2", features = ["no-entrypoint", "cpi"] }
solana-program = "< 1.15"
