[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29", features = ["init-if-needed"] }
anchor-spl = { version = "0.29", features = ["metadata", "associated_token"] }
mpl-bubblegum = { version = "1.4.0" }
mpl-token-metadata = { version = "4.1.2" }
spl-account-compression = { version = "0.3.1", features = ["no-entrypoint"] }
solana-program = "1.18.23"
