# cargo-features = ["workspace-inheritance"]

[package]
name = "passport"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "passport"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-account-compression = { workspace = true }
mpl-token-metadata = { workspace = true }
mpl-bubblegum = { workspace = true }
