# cargo-features = ["workspace-inheritance"]

[package]
name = "underdog-identity"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "underdog_identity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
# anchor-spl = { workspace = true }
# solana-program = { workspace = true }
# spl-account-compression = { workspace = true }
# mpl-token-metadata = { workspace = true }
# mpl-bubblegum = { workspace = true }
anchor-spl = { version = "0.26.0" }
mpl-bubblegum = { version = "0.9.2", features = ["no-entrypoint", "cpi"] }
spl-account-compression = { version = "0.1.2", features = ["no-entrypoint", "cpi"] }
solana-program = "< 1.15"
proc-macro-crate = "=1.2.1"
mpl-token-auth-rules = "=1.2.0"
shared-utils = { path = "../../utils/shared-utils" }